--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,9 +20,9 @@
     <application 
     	android:icon="@drawable/icon" 
     	android:label="@string/app_name" 
-    	android:theme="@style/Nullwire.Theme.Light.NoTitleBar"
+    	android:theme="@style/Yammer.Theme.Light.NoTitleBar"
     	android:debuggable="false"
-    	android:name=".Yowl"
+    	android:name=".YammerApp"
     	>
 
 		<!--
@@ -47,7 +47,7 @@
 		<!--
 			Activities
 		-->
-        <activity android:name=".Yammer"
+        <activity android:name=".YammerActivity"
                   android:label="@string/app_name"
                   android:launchMode="singleTop"
                   >
@@ -73,7 +73,7 @@
 			</intent-filter>
         </activity>        
         
-        <activity 	android:name=".About" 
+        <activity 	android:name=".AboutActivity" 
     				android:theme="@android:style/Theme.Dialog"
         			/>
         
@@ -85,7 +85,7 @@
         <activity 	android:name=".YammerMessage" />
         
         <activity 	android:name=".YammerSettings" 
-    				android:theme="@style/Nullwire.Theme.Light.NoTitleBar"
+    				android:theme="@style/Yammer.Theme.Light.NoTitleBar"
         			/>
     </application>
     
