--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
     <property name="android-tools" value="../android/tools" />
     
     <!-- Application Package Name -->
-    <property name="application-package" value="nullwire.yammer" />
+    <property name="application-package" value="com.yammer" />
 
     <!-- The intermediates directory -->
     <!-- Eclipse uses "bin" for its own output, so we do the same. -->
