--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yammer"
-      android:versionCode="12"
-      android:versionName="1.0.23">
+      android:versionCode="14"
+      android:versionName="1.1.0">
 
 	<!--
 		Permissions 
 	-->
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.VIBRATE"/> 
-	<uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<!--uses-permission android:name="android.permission.READ_PHONE_STATE"/--> 
+	<!-- uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/-->
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 	<uses-permission android:name="android.permission.WAKE_LOCK"/> 
 	
 	<!--
