--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.yammer"
-      android:versionCode="14"
-      android:versionName="1.1.0">
+      package="com.yammer.v1"
+      android:versionCode="15"
+      android:versionName="1.1">
 
 	<!--
 		Permissions 
