--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yammer.v1"
-      android:versionCode="23"
-      android:versionName="1.3.8">
+      android:versionCode="24"
+      android:versionName="1.3.9">
 
 	<!--
 		Permissions 
@@ -58,7 +58,7 @@
             </intent-filter>
         </activity>
         
-        <activity 	android:name=".YammerReply" 
+        <activity 	android:name=".YammerReplyActivity" 
             		android:theme="@android:style/Theme.Translucent.NoTitleBar"
         			/>
 
